<?xml version="1.0"?>
<package>
  <name>pong_ball</name>
  <version>0.0.0</version>
  <description>Node for playing Pong </description>

  <license>TODO</license>
  <maintainer email="thor.stark.stenvang@gmail.com">thss</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>

</package>
